[gd_scene load_steps=5 format=3 uid="uid://dlyvrxjsyph32"]

[ext_resource type="Script" uid="uid://dudq6egt8ypfc" path="res://scripts/menu/game/inventory.gd" id="1_wolww"]
[ext_resource type="Texture2D" uid="uid://dhw33epoqysq2" path="res://graphics/icons/backpack.png" id="2_kh657"]
[ext_resource type="PackedScene" uid="uid://bt1url4e2ii34" path="res://scenes/menu/game/InventoryItem.tscn" id="2_w8n5m"]
[ext_resource type="Texture2D" uid="uid://c5gry6ug3erex" path="res://graphics/icons/gold.png" id="4_skk8o"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wolww")

[node name="BagButton" type="Button" parent="."]
layout_mode = 2
offset_left = 1112.0
offset_top = 608.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 8
focus_mode = 0
icon = ExtResource("2_kh657")

[node name="MainInv" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -330.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 3
mouse_filter = 1
color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="EquippedSlot" parent="MainInv" instance=ExtResource("2_w8n5m")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 38.0

[node name="EquippedLabel" type="Label" parent="MainInv"]
layout_mode = 0
offset_left = 39.0
offset_top = 11.0
offset_right = 95.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 12
text = "Equipped"

[node name="GoldIcon" type="TextureRect" parent="MainInv"]
layout_mode = 0
offset_left = 95.0
offset_top = 4.0
offset_right = 127.0
offset_bottom = 36.0
texture = ExtResource("4_skk8o")

[node name="GoldCount" type="Label" parent="MainInv"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 126.0
offset_top = 11.0
offset_right = 184.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 12
text = "12346789"

[node name="Grid" type="GridContainer" parent="MainInv"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 288)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -290.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5
